make extending parameters class more clear